# csv_labelizer

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  README.md  STATUS.md  eslint.config.js  package.json  test-empty.csv  tsconfig.json  vite.config.ts
.cargo/: config.toml
.specify/memory/: constitution.md
specs/001-csv-image-labeling/: plan.md  spec.md  tasks.md  tasks.md.backup
specs/001-csv-image-labeling/checklists/: requirements.md
specs/002-fix-pagination-skip/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-pagination-skip/checklists/: requirements.md
specs/003-preserve-empty-classes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-adopt-csv-library/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-advanced-multi-column-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-fix-deps-warnings/: plan.md  research.md  spec.md  tasks.md
specs/007-exact-word-search/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: editor.js  editor.ts  image-preview.js  image-preview.ts  index.html  main.js  main.ts  navigation.js  navigation.ts  search.js  search.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: commands.rs  csv_engine.rs  main.rs  state.rs
src-tauri/tests/: integration_test.rs  performance_test.rs
tests/: csv_engine_test.rs
tests/frontend/: editor.test.ts  navigation.test.ts
(+8 files in other folders)
