[package]
name = "csv-labelizer"
version = "0.1.0"
description = "CSV Image Labeling Application"
authors = ["Loic"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
